# PersonalityResearch

./: .gitignore  README.md  chat_sdk.py  controllers.py  human_descriptive.py  loader.py  main.py  models.py  pyproject.toml  word_classification_results.json
app/: database.py
app/api/: character_api.py  commendatory_term_api.py  derogatory_term_api.py  word2_api.py  word_api.py
app/dtos/: character_dto.py  chinese_word_dto.py  commendatory_term_dto.py  derogatory_term_dto.py  word_dto.py
app/models/: character.py  chinese_word.py  commendatory_term.py  derogatory_term.py  word.py
app/services/: character_service.py  commendatory_term_service.py  derogatory_term_service.py  word2_service.py  word_service.py
resources/: PosthumousTitle.json  commendatory_term.json  derogatory_terms_Character.json  derogatory_terms_ability.json  derogatory_terms_behavior.json  derogatory_terms_culture.json  derogatory_terms_dev.json  derogatory_terms_env.json  derogatory_terms_relation.json  derogatory_terms_result.json  derogatory_terms_status.json  derogatory_terms_system.json  derogatory_terms_thought.json  first_level_word_list.txt  second_level_word_list.txt  third_level_word_list.txt
scripts/: char_descriptive.py  chat_sdk.py  ci_zu.py  commendatory_terms.py  derogatory_terms.py  human_descriptive.py  loader.py  posthumous_title.py  word_descriptive.py
word-classifications/: index.html  package-lock.json  package.json
word-classifications/src/: App.tsx  index.css
word-classifications/src/components/: BaseList.tsx  CategorySidebar.tsx
(+9 files in other folders)
