[tool.poetry]
name = "personalityresearch"
version = "0.1.0"
description = ""
authors = ["likeyiyy <keyi.lee@gllue.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
